fixing the stretch styles

--- a/great-idea-website/css/index.stretch.css
+++ b/great-idea-website/css/index.stretch.css
@@ -6,12 +6,17 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
+body {
+	padding-top: 80px;
+}
+
 p {
 	font-family: 'Quicksand', sans-serif;
 }
 
 header {
 	position: fixed;
+	top: 0;
 	height: 66px;
 	width: 876px;
 	margin: 0 auto;
@@ -30,10 +35,6 @@ header nav a:hover{
 	color: white;
 	transform: scale(1.25);
 	transition: all .5s;
-}
-
-#wowsers {
-	padding-top: 100px;
 }
 
 #wowsers a {
